Make acquire more exception safe